apps/shop/payment/k8s/overlays/prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-payment-prod
spec:
  host: shop-payment.shop-payment.svc.cluster.local
  subsets:
  - name: shop-payment-prod
    labels:
      app: shop-payment
      env: prod
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: shop-payment-prod-p1a
    labels:
      app: shop-payment
      env: prod
      deploy.cloud.google.com/target-id: p1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
